[workspace]
members = [
    "crates/barry2d",
    "crates/barry3d",
    # "crates/barry2d-f64",
    # "crates/barry3d-f64",
]
resolver = "2"

[patch.crates-io]
barry2d = { path = "crates/barry2d" }
barry3d = { path = "crates/barry3d" }
# barry2d-f64 = { path = "crates/barry2d-f64" }
# barry3d-f64 = { path = "crates/barry3d-f64" }

#simba = { path = "../simba" }
#simba = { git = "https://github.com/dimforge/simba", rev = "45a5266eb36ed9d25907e9bf9130cd4ac846a748" }
#nalgebra = { git = "https://github.com/dimforge/nalgebra", rev = "0cf79aef0e6155befc3279a3145f1940822b8377" }
