[package]
name = "barry2d"
version = "0.1.0"
authors = [
    "Joona Aalto <jondolf.dev@gmail.com>",
    "Sébastien Crozet <developer@crozet.re>",
]

description = "2 dimensional collision detection library in Rust."
homepage = "http://github.com/Jondolf/barry"
repository = "https://github.com/Jondolf/barry"
readme = "README.md"
keywords = ["collision", "geometry", "distance", "ray", "convex"]
categories = ["science", "game-development", "mathematics", "wasm"]
license = "Apache-2.0"
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[features]
default = ["required-features", "std"]
required-features = ["dim2", "f32"]
std = ["slab", "rustc-hash", "simba/std", "arrayvec/std", "spade"]
dim2 = []
f32 = []
serde-serialize = ["serde", "arrayvec/serde"]
rkyv-serialize = ["rkyv/validation", "simba/rkyv-serialize"]
bytemuck-serialize = ["bytemuck"]
simd-stable = ["simba/wide", "simd-is-enabled"]
simd-nightly = ["simba/packed_simd", "simd-is-enabled"]
enhanced-determinism = ["simba/libm_force", "indexmap"]
cuda = ["cust_core", "cust"]
parallel = ["rayon"]

# Do not enable this feature directly. It is automatically
# enabled with the "simd-stable" or "simd-nightly" feature.
simd-is-enabled = []

[lib]
name = "barry2d"
path = "../../src/lib.rs"
required-features = ["required-features"]

[dependencies]
either = { version = "1", default-features = false }
bitflags = "1"
downcast-rs = { version = "1", default-features = false }
num-traits = { version = "0.2", default-features = false }
smallvec = "1"
slab = { version = "0.4", optional = true }
arrayvec = { version = "0.7", default-features = false }
simba = { version = "0.8", default-features = false }
bevy_math = { version = "0.12", path = "../../../bevy/crates/bevy_math", default-features = false, features = [
    "approx",
] }
approx = { version = "0.5", default-features = false }
serde = { version = "1.0", optional = true, features = ["derive"] }
rkyv = { version = "0.7.41", optional = true }
num-derive = "0.3"
indexmap = { version = "1", features = ["serde-1"], optional = true }
rustc-hash = { version = "1", optional = true }
cust_core = { version = "0.1", optional = true }
spade = { version = "2", optional = true }
rayon = { version = "1", optional = true }
bytemuck = { version = "1", features = ["derive"], optional = true }

[target.'cfg(not(target_os = "cuda"))'.dependencies]
cust = { version = "0.3", optional = true }

[dev-dependencies]
glam = { version = "0.25", default-features = false, features = [
    "approx",
    "bytemuck",
    "rand",
] }
simba = { version = "0.8", default-features = false, features = [
    "partial_fixed_point_support",
] }
oorandom = "11"
ptree = "0.4.0"
rand = { version = "0.8" }
rand_isaac = "0.3"
